--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
 
     <!-- custom css file link  -->
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" defer> </script>
+    <script src="js/script.js" defer></script>
 
 </head>
 <hr>
 
-<!-- header section starts  -->
+<!-- header section starts-->
 <header class="header">
     <div class="container">
         <div class="navbar">
             <a href="##" class="nav__logo"><img src="./images/logo.png" alt="logo"></a>
             <nav class="header__nav">
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#menu">Menu</a></li>
-                    <li><a href="#products">Products</a></li>
-                    <li><a href="#review">Review</a></li>
-                    <li><a href="#contacts">Contact</a></li>
-                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="review.html">Review</a></li>
+                    <li><a href="contacts.html">Contact</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                 </ul>
             </nav>
             <div class="icons">
@@ -59,7 +59,7 @@
 <!-- home section starts  -->
 <section class="main" id="home">
     <div class="container">
-        <div class="inputBox" id="inputBox">
+        <div class="inputBox_search" id="inputBox">
             <input type="text" placeholder="search here ...">
             <span class="fas fa-search"></span>
         </div>
@@ -108,308 +108,6 @@
 </section>
 
 <!-- home section ends -->
-
-<!-- about section starts  -->
-
-<section class="about" id="about">
-    <div class="container">
-        <h1 class="heading"> <span>ABOUT</span> US </h1>
-        <div class="row">
-            <div class="about__left">
-                <img src="./images/about-img.jpeg" alt="About">
-            </div>
-            <div class="about__content">
-                <h3>What Makes Our Coffee Special?</h3>
-                <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Voluptatibus Qui Ea Ullam, Enim Tempora
-                    Ipsum Fuga Alias Quae Ratione A Officiis Id Temporibus Autem? Quod Nemo Facilis Cupiditate. Ex,
-                    Vel?</p>
-                <p>Lorem Ipsum Dolor Sit Amet Consectetur, Adipisicing Elit. Odit Amet Enim Quod Veritatis, Nihil
-                    Voluptas Culpa! Neque Consectetur Obcaecati Sapiente?</p>
-                <a href="##" class="about-btn">Learn More</a>
-            </div>
-        </div>
-    </div>
-
-</section>
-
-<!-- about section ends -->
-
-<!-- menu section starts  -->
-<section class="menu" id="menu">
-    <div class="container">
-        <h1 class="heading">OUR <span>MENU</span></h1>
-        <div class="box__container">
-            <div class="box">
-                <img src="./images/menu-1.png" alt="menu-img" class="menu-img">
-                <h3>Tasty and Healty</h3>
-                <div class="price">
-                    $15.99 <span>20.99</span>
-                </div>
-                <a href="##" class="btn">Add To Cart</a>
-            </div>
-            <div class="box">
-                <img src="./images/menu-2.png" alt="menu-img" class="menu-img">
-                <h3>Tasty and Healty</h3>
-                <div class="price">
-                    $15.99 <span>20.99</span>
-                </div>
-                <a href="##" class="btn">Add To Cart</a>
-            </div>
-            <div class="box">
-                <img src="./images/menu-3.png" alt="menu-img" class="menu-img">
-                <h3>Tasty and Healty</h3>
-                <div class="price">
-                    $15.99 <span>20.99</span>
-                </div>
-                <a href="##" class="btn">Add To Cart</a>
-            </div>
-            <div class="box">
-                <img src="./images/menu-4.png" alt="menu-img" class="menu-img">
-                <h3>Tasty and Healty</h3>
-                <div class="price">
-                    $15.99 <span>20.99</span>
-                </div>
-                <a href="##" class="btn">Add To Cart</a>
-            </div>
-            <div class="box">
-                <img src="./images/menu-5.png" alt="menu-img" class="menu-img">
-                <h3>Tasty and Healty</h3>
-                <div class="price">
-                    $15.99 <span>20.99</span>
-                </div>
-                <a href="##" class="btn">Add To Cart</a>
-            </div>
-            <div class="box">
-                <img src="./images/menu-6.png" alt="menu-img" class="menu-img">
-                <h3>Tasty and Healty</h3>
-                <div class="price">
-                    $15.99 <span>20.99</span>
-                </div>
-                <a href="##" class="btn">Add To Cart</a>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- menu section ends -->
-
-<!-- products section starts  -->
-
-<section class="products" id="products">
-    <div class="container">
-        <h1 class="heading">OUR <span>Products</span></h1>
-        <div class="box__container">
-            <div class="box">
-                <div class="icons">
-                    <a href="##" class="fa fa-shopping-cart"></a>
-                    <a href="##" class="fa fa-heart"></a>
-                    <a href="##" class="fa fa-eye"></a>
-                </div>
-                <div class="img">
-                    <img src="./images/product-1.png" alt="Product-1">
-                </div>
-                <div class="content">
-                    <h3>Fresh Coffee</h3>
-                    <div class="stars">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star-half-alt"></i>
-                    </div>
-                    <div class="price">
-                        $15.99 <span>20.99</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="box">
-                <div class="icons">
-                    <a href="##" class="fa fa-shopping-cart"></a>
-                    <a href="##" class="fa fa-heart"></a>
-                    <a href="##" class="fa fa-eye"></a>
-                </div>
-                <div class="img">
-                    <img src="./images/product-2.png" alt="Product-2">
-                </div>
-                <div class="content">
-                    <h3>Fresh Coffee</h3>
-                    <div class="stars">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star-half-alt"></i>
-                    </div>
-                    <div class="price">
-                        $15.99 <span>20.99</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="box">
-                <div class="icons">
-                    <a href="##" class="fa fa-shopping-cart"></a>
-                    <a href="##" class="fa fa-heart"></a>
-                    <a href="##" class="fa fa-eye"></a>
-                </div>
-                <div class="img">
-                    <img src="./images/product-3.png" alt="Product-3">
-                </div>
-                <div class="content">
-                    <h3>Fresh Coffee</h3>
-                    <div class="stars">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star-half-alt"></i>
-                    </div>
-                    <div class="price">
-                        $15.99 <span>20.99</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- products section ends -->
-<!-- review section starts  -->
-
-<section class="review" id="review">
-    <div class="container">
-        <h1 class="heading">CUSTOMER'S <span>REVIEW</span></h1>
-        <div class="box__container">
-            <div class="box">
-                <div class="img">
-                    <img src="./images/quote-img.png" alt="000">
-                </div>
-                <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Animi Nulla Sit Libero Nemo Fuga Sequi Nobis? Necessitatibus Aut Laborum, Nisi Quas Eaque Laudantium Consequuntur Iste Ex Aliquam Minus Vel? Nemo.</p>
-                <div class="review__image">
-                    <img src="./images/pic-1.png" alt="pic-1">
-                    <h3> John Doe</h3>
-                </div>
-                <div class="stars">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-alt"></i>
-                </div>
-            </div>
-            
-            <div class="box">
-                <div class="img">
-                    <img src="./images/quote-img.png" alt="000">
-                </div>
-                <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Animi Nulla Sit Libero Nemo Fuga Sequi Nobis? Necessitatibus Aut Laborum, Nisi Quas Eaque Laudantium Consequuntur Iste Ex Aliquam Minus Vel? Nemo.</p>
-                <div class="review__image">
-                    <img src="./images/pic-2.png" alt="000">
-                    <h3> John Doe</h3>
-                </div>
-                <div class="stars">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-alt"></i>
-                </div>
-            </div>
-            
-            <div class="box">
-                <div class="img">
-                    <img src="./images/quote-img.png" alt="000">
-                </div>
-                <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Animi Nulla Sit Libero Nemo Fuga Sequi Nobis? Necessitatibus Aut Laborum, Nisi Quas Eaque Laudantium Consequuntur Iste Ex Aliquam Minus Vel? Nemo.</p>
-                <div class="review__image">
-                    <img src="./images/pic-3.png" alt="000">
-                    <h3> John Doe</h3>
-                </div>
-                <div class="stars">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-alt"></i>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- review section starts  -->
-<!-- contact section starts  -->
-<section class="contacts" id="contacts">
-    <div class="container">
-        <h1 class="heading"><span>Contact</span> US</h1>
-        <div class="row">
-            <div class="about__left">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d47950.83553912683!2d69.28494814999999!3d41.310446850000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1634926296158!5m2!1sen!2s" style="border:0;" allowfullscreen="" loading="lazy" class="map"></iframe>
-            </div>
-            <div class="about__content">
-                <h3>GET IN TOUCH</h3>
-                <div class="inputBox">
-                    <span class="fa fa-user"></span>
-                    <input type="text" placeholder="name">
-                </div>
-                <div class="inputBox">
-                    <span class="fa fa-envelope"></span>
-                    <input type="email" placeholder="email">
-                </div>
-                <div class="inputBox">
-                    <span class="fa fa-phone"></span>
-                    <input type="number" placeholder="number">
-                </div>
-                <a href="##" type="submit" class="btn">Contact Now</a>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- contact section ends -->
-<!-- blogs section starts  -->
-    <section class="blog" id="blog">
-        <div class="container">
-            <h1 class="heading">OUR <span>BLOGS</span></h1>
-            <div class="box__container">
-                <div class="box">
-                    <div class="image">
-                        <img src="./images/blog-1.jpeg" alt="blog-1">
-                    </div>
-                    <div class="blog__content">
-                        <a href="##" class="blog__link">Tasty And Refreshing Coffee</a> <br>
-                        <span>By Admin / 21st May, 2021</span>
-                        <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Non, Dicta.</p>
-                        <a href="##" class="btn">Read More</a>
-                    </div>
-                </div>
-                <div class="box">
-                    <div class="image">
-                        <img src="./images/blog-2.jpeg" alt="blog-2">
-                    </div>
-                    <div class="blog__content">
-                        <a href="##" class="blog__link">Tasty And Refreshing Coffee</a> <br>
-                        <span>By Admin / 21st May, 2021</span>
-                        <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Non, Dicta.</p>
-                        <a href="##" class="btn">Read More</a>
-                    </div>
-                </div>
-                <div class="box">
-                    <div class="image">
-                        <img src="./images/blog-3.jpeg" alt="blog-3">
-                    </div>
-                    <div class="blog__content">
-                        <a href="##" class="blog__link">Tasty And Refreshing Coffee</a> <br>
-                        <span>By Admin / 21st May, 2021</span>
-                        <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Non, Dicta.</p>
-                        <a href="##" class="btn">Read More</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-<!-- blogs section ends -->
-
 <!-- footer section starts  -->
 <section class="footer">
     <div class="icons">
@@ -432,27 +130,7 @@
     </div>
     <p>Created By <span>Mr Abdullaev</span> | All Rights Reserved </p>
 </section>
-
-
 <!-- footer section ends -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- custom js file link  -->
 </body>
 
 </html>
