--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <header class="header">
     <div class="container">
         <div class="navbar">
-            <a href="##" class="nav__logo"><img src="./images/logo.png" alt="logo"></a>
+            <a href="index.html" class="nav__logo"><img src="./images/logo.png" alt="logo"></a>
             <nav class="header__nav">
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -46,13 +46,13 @@
     <i class="fas fa-window-close" id="close-btn"></i>
     <nav class="mobile__nav">
         <ul>
-            <li><a class="mobile__nav-link" href="#about">About</a></li>
-            <li><a class="mobile__nav-link" href="#menu">Menu</a></li>
-            <li><a class="mobile__nav-link" href="#home">Home</a></li>
-            <li><a class="mobile__nav-link" href="#products">Products</a></li>
-            <li><a class="mobile__nav-link" href="#review">Review</a></li>
-            <li><a class="mobile__nav-link" href="#contacts">Contact</a></li>
-            <li><a class="mobile__nav-link" href="#blog">Blog</a></li>
+            <li><a class="mobile__nav-link" href="index.html">Home</a></li>
+            <li><a class="mobile__nav-link" href="about.html">About</a></li>
+            <li><a class="mobile__nav-link" href="menu.html">Menu</a></li>
+            <li><a class="mobile__nav-link" href="products.html">Products</a></li>
+            <li><a class="mobile__nav-link" href="review.html">Review</a></li>
+            <li><a class="mobile__nav-link" href="contacts.html">Contact</a></li>
+            <li><a class="mobile__nav-link" href="blog.html">Blog</a></li>
         </ul>
     </nav>
 </section>
