--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
     <header class="header">
         <div class="container">
             <div class="navbar">
-                <a href="##" class="nav__logo"><img src="./images/logo.png" alt="logo"></a>
+                <a href="index.html" class="nav__logo"><img src="./images/logo.png" alt="logo"></a>
                 <nav class="header__nav">
                     <ul>
                         <li><a href="index.html">Home</a></li>
