--- a/blog.html
+++ b/blog.html
@@ -58,6 +58,46 @@
     <!-- blogs section starts  -->
     <section class="blog" id="blog">
         <div class="container">
+            <div class="container">
+                <div class="inputBox_search" id="inputBox">
+                    <input type="text" placeholder="search here ...">
+                    <span class="fas fa-search"></span>
+                </div>
+                <div class="main__cart" id="menu__cart">
+                    <div class="main__cart-box">
+                        <img src="./images/cart-item-1.png" alt="cart-item-1">
+                        <div class="box__content">
+                            <h3>Cart Item 01</h3>
+                            <p class="price">$15.99/-</p>
+                        </div>
+                        <span class="fas fa-times"></span>
+                    </div>
+                    <div class="main__cart-box">
+                        <img src="./images/cart-item-2.png" alt="cart-item-2">
+                        <div class="box__content">
+                            <h3>Cart Item 02</h3>
+                            <p class="price">$15.99/-</p>
+                        </div>
+                        <span class="fas fa-times"></span>
+                    </div>
+                    <div class="main__cart-box">
+                        <img src="./images/cart-item-3.png" alt="cart-item-3">
+                        <div class="box__content">
+                            <h3>Cart Item 03</h3>
+                            <p class="price">$15.99/-</p>
+                        </div>
+                        <span class="fas fa-times"></span>
+                    </div>
+                    <div class="main__cart-box">
+                        <img src="./images/cart-item-4.png" alt="cart-item-4">
+                        <div class="box__content">
+                            <h3>Cart Item 04</h3>
+                            <p class="price">$15.99/-</p>
+                        </div>
+                        <span class="fas fa-times"></span>
+                    </div>
+                    <a href="##" class="btn">Check Out Now</a>
+                </div>
             <h1 class="heading">OUR <span>BLOGS</span></h1>
             <div class="box__container">
                 <div class="box">
