--- a/about.html
+++ b/about.html
@@ -59,6 +59,45 @@
 
 <section class="about" id="about">
     <div class="container">
+        <div class="inputBox_search" id="inputBox">
+            <input type="text" placeholder="search here ...">
+            <span class="fas fa-search"></span>
+        </div>
+        <div class="main__cart" id="menu__cart">
+            <div class="main__cart-box">
+                <img src="./images/cart-item-1.png" alt="cart-item-1">
+                <div class="box__content">
+                    <h3>Cart Item 01</h3>
+                    <p class="price">$15.99/-</p>
+                </div>
+                <span class="fas fa-times"></span>
+            </div>
+            <div class="main__cart-box">
+                <img src="./images/cart-item-2.png" alt="cart-item-2">
+                <div class="box__content">
+                    <h3>Cart Item 02</h3>
+                    <p class="price">$15.99/-</p>
+                </div>
+                <span class="fas fa-times"></span>
+            </div>
+            <div class="main__cart-box">
+                <img src="./images/cart-item-3.png" alt="cart-item-3">
+                <div class="box__content">
+                    <h3>Cart Item 03</h3>
+                    <p class="price">$15.99/-</p>
+                </div>
+                <span class="fas fa-times"></span>
+            </div>
+            <div class="main__cart-box">
+                <img src="./images/cart-item-4.png" alt="cart-item-4">
+                <div class="box__content">
+                    <h3>Cart Item 04</h3>
+                    <p class="price">$15.99/-</p>
+                </div>
+                <span class="fas fa-times"></span>
+            </div>
+            <a href="##" class="btn">Check Out Now</a>
+        </div>
         <h1 class="heading"> <span>ABOUT</span> US </h1>
         <div class="row">
             <div class="about__left">
@@ -90,13 +129,13 @@
         </div>
         <div class="footer__navbar">
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#menu">Menu</a></li>
-                <li><a href="#products">Products</a></li>
-                <li><a href="#review">Review</a></li>
-                <li><a href="#contacts">Contact</a></li>
-                <li><a href="#blog">Blog</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="review.html">Review</a></li>
+                <li><a href="contacts.html">Contact</a></li>
+                <li><a href="blog.html">Blog</a></li>
             </ul>
         </div>
         <p>Created By <span>Mr Abdullaev</span> | All Rights Reserved </p>
