--- a/menu.html
+++ b/menu.html
@@ -44,13 +44,13 @@
     <i class="fas fa-window-close" id="close-btn"></i>
     <nav class="mobile__nav">
         <ul>
-            <li><a class="mobile__nav-link" href="#about">About</a></li>
-            <li><a class="mobile__nav-link" href="#menu">Menu</a></li>
-            <li><a class="mobile__nav-link" href="#home">Home</a></li>
-            <li><a class="mobile__nav-link" href="#products">Products</a></li>
-            <li><a class="mobile__nav-link" href="#review">Review</a></li>
-            <li><a class="mobile__nav-link" href="#contacts">Contact</a></li>
-            <li><a class="mobile__nav-link" href="#blog">Blog</a></li>
+            <li><a class="mobile__nav-link" href="about.html">About</a></li>
+            <li><a class="mobile__nav-link" href="menu">Menu</a></li>
+            <li><a class="mobile__nav-link" href="home">Home</a></li>
+            <li><a class="mobile__nav-link" href="products">Products</a></li>
+            <li><a class="mobile__nav-link" href="review">Review</a></li>
+            <li><a class="mobile__nav-link" href="contacts">Contact</a></li>
+            <li><a class="mobile__nav-link" href="blog">Blog</a></li>
         </ul>
     </nav>
 </section>
@@ -58,6 +58,46 @@
     <!-- menu section starts  -->
 <section class="menu" id="menu">
     <div class="container">
+        <div class="container">
+            <div class="inputBox_search" id="inputBox">
+                <input type="text" placeholder="search here ...">
+                <span class="fas fa-search"></span>
+            </div>
+            <div class="main__cart" id="menu__cart">
+                <div class="main__cart-box">
+                    <img src="./images/cart-item-1.png" alt="cart-item-1">
+                    <div class="box__content">
+                        <h3>Cart Item 01</h3>
+                        <p class="price">$15.99/-</p>
+                    </div>
+                    <span class="fas fa-times"></span>
+                </div>
+                <div class="main__cart-box">
+                    <img src="./images/cart-item-2.png" alt="cart-item-2">
+                    <div class="box__content">
+                        <h3>Cart Item 02</h3>
+                        <p class="price">$15.99/-</p>
+                    </div>
+                    <span class="fas fa-times"></span>
+                </div>
+                <div class="main__cart-box">
+                    <img src="./images/cart-item-3.png" alt="cart-item-3">
+                    <div class="box__content">
+                        <h3>Cart Item 03</h3>
+                        <p class="price">$15.99/-</p>
+                    </div>
+                    <span class="fas fa-times"></span>
+                </div>
+                <div class="main__cart-box">
+                    <img src="./images/cart-item-4.png" alt="cart-item-4">
+                    <div class="box__content">
+                        <h3>Cart Item 04</h3>
+                        <p class="price">$15.99/-</p>
+                    </div>
+                    <span class="fas fa-times"></span>
+                </div>
+                <a href="##" class="btn">Check Out Now</a>
+            </div>
         <h1 class="heading">OUR <span>MENU</span></h1>
         <div class="box__container">
             <div class="box">
