--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
                 <nav class="header__nav">
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
+                        <li><a class="active" href="about.html">About</a></li>
                         <li><a href="menu.html">Menu</a></li>
                         <li><a href="products.html">Products</a></li>
                         <li><a href="review.html">Review</a></li>
