--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
                         <li><a href="products.html">Products</a></li>
                         <li><a href="review.html">Review</a></li>
                         <li><a href="contacts.html">Contact</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a class="active" href="blog.html">Blog</a></li>
                     </ul>
                 </nav>
                 <div class="icons">
@@ -44,13 +44,13 @@
         <i class="fas fa-window-close" id="close-btn"></i>
         <nav class="mobile__nav">
             <ul>
-                <li><a class="mobile__nav-link" href="#about">About</a></li>
-                <li><a class="mobile__nav-link" href="#menu">Menu</a></li>
-                <li><a class="mobile__nav-link" href="#home">Home</a></li>
-                <li><a class="mobile__nav-link" href="#products">Products</a></li>
-                <li><a class="mobile__nav-link" href="#review">Review</a></li>
-                <li><a class="mobile__nav-link" href="#contacts">Contact</a></li>
-                <li><a class="mobile__nav-link" href="#blog">Blog</a></li>
+                <li><a class="mobile__nav-link" href="index.html">Home</a></li>
+                <li><a class="mobile__nav-link" href="about.html">About</a></li>
+                <li><a class="mobile__nav-link" href="menu.html">Menu</a></li>
+                <li><a class="mobile__nav-link" href="products.html">Products</a></li>
+                <li><a class="mobile__nav-link" href="review.html">Review</a></li>
+                <li><a class="mobile__nav-link" href="contacts.html">Contact</a></li>
+                <li><a class="mobile__nav-link" href="blog.html">Blog</a></li>
             </ul>
         </nav>
     </section>
@@ -149,13 +149,13 @@
         </div>
         <div class="footer__navbar">
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#menu">Menu</a></li>
-                <li><a href="#products">Products</a></li>
-                <li><a href="#review">Review</a></li>
-                <li><a href="#contacts">Contact</a></li>
-                <li><a href="#blog">Blog</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="review.html">Review</a></li>
+                <li><a href="contacts.html">Contact</a></li>
+                <li><a href="blog.html">Blog</a></li>
             </ul>
         </div>
         <p>Created By <span>Mr Abdullaev</span> | All Rights Reserved </p>
