--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="index.html" class="nav__logo"><img src="./images/logo.png" alt="logo"></a>
             <nav class="header__nav">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="menu.html">Menu</a></li>
                     <li><a href="products.html">Products</a></li>
@@ -119,13 +119,13 @@
     </div>
     <div class="footer__navbar">
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#menu">Menu</a></li>
-            <li><a href="#products">Products</a></li>
-            <li><a href="#review">Review</a></li>
-            <li><a href="#contacts">Contact</a></li>
-            <li><a href="#blog">Blog</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="review.html">Review</a></li>
+            <li><a href="contacts.html">Contact</a></li>
+            <li><a href="blog.html">Blog</a></li>
         </ul>
     </div>
     <p>Created By <span>Mr Abdullaev</span> | All Rights Reserved </p>
