--- a/blog.html
+++ b/blog.html
@@ -99,6 +99,7 @@
                     <a href="##" class="btn">Check Out Now</a>
                 </div>
             <h1 class="heading">OUR <span>BLOGS</span></h1>
+            
             <div class="box__container">
                 <div class="box">
                     <div class="image">
@@ -125,6 +126,41 @@
                 <div class="box">
                     <div class="image">
                         <img src="./images/blog-3.jpeg" alt="blog-3">
+                    </div>
+                    <div class="blog__content">
+                        <a href="##" class="blog__link">Tasty And Refreshing Coffee</a> <br>
+                        <span>By Admin / 21st May, 2021</span>
+                        <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Non, Dicta.</p>
+                        <a href="##" class="btn">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="box__container">
+                <div class="box">
+                    <div class="image">
+                        <img src="./images/blog-2.jpeg" alt="blog-1">
+                    </div>
+                    <div class="blog__content">
+                        <a href="##" class="blog__link">Tasty And Refreshing Coffee</a> <br>
+                        <span>By Admin / 21st May, 2021</span>
+                        <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Non, Dicta.</p>
+                        <a href="##" class="btn">Read More</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="image">
+                        <img src="./images/blog-3.jpeg" alt="blog-2">
+                    </div>
+                    <div class="blog__content">
+                        <a href="##" class="blog__link">Tasty And Refreshing Coffee</a> <br>
+                        <span>By Admin / 21st May, 2021</span>
+                        <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Non, Dicta.</p>
+                        <a href="##" class="btn">Read More</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="image">
+                        <img src="./images/blog-1.jpeg" alt="blog-3">
                     </div>
                     <div class="blog__content">
                         <a href="##" class="blog__link">Tasty And Refreshing Coffee</a> <br>
