--- a/products.html
+++ b/products.html
@@ -173,6 +173,79 @@
                 </div>
             </div>
         </div>
+        <div class="box__container">
+            <div class="box">
+                <div class="icons">
+                    <a href="##" class="fa fa-shopping-cart"></a>
+                    <a href="##" class="fa fa-heart"></a>
+                    <a href="##" class="fa fa-eye"></a>
+                </div>
+                <div class="img">
+                    <img src="./images/product-1.png" alt="Product-1">
+                </div>
+                <div class="content">
+                    <h3>Fresh Coffee</h3>
+                    <div class="stars">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-half-alt"></i>
+                    </div>
+                    <div class="price">
+                        $15.99 <span>20.99</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="icons">
+                    <a href="##" class="fa fa-shopping-cart"></a>
+                    <a href="##" class="fa fa-heart"></a>
+                    <a href="##" class="fa fa-eye"></a>
+                </div>
+                <div class="img">
+                    <img src="./images/product-2.png" alt="Product-2">
+                </div>
+                <div class="content">
+                    <h3>Fresh Coffee</h3>
+                    <div class="stars">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-half-alt"></i>
+                    </div>
+                    <div class="price">
+                        $15.99 <span>20.99</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="icons">
+                    <a href="##" class="fa fa-shopping-cart"></a>
+                    <a href="##" class="fa fa-heart"></a>
+                    <a href="##" class="fa fa-eye"></a>
+                </div>
+                <div class="img">
+                    <img src="./images/product-3.png" alt="Product-3">
+                </div>
+                <div class="content">
+                    <h3>Fresh Coffee</h3>
+                    <div class="stars">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-half-alt"></i>
+                    </div>
+                    <div class="price">
+                        $15.99 <span>20.99</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 
