--- a/review.html
+++ b/review.html
@@ -154,6 +154,61 @@
                 </div>
             </div>
         </div>
+        <div class="box__container">
+            <div class="box">
+                <div class="img">
+                    <img src="./images/quote-img.png" alt="000">
+                </div>
+                <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Animi Nulla Sit Libero Nemo Fuga Sequi Nobis? Necessitatibus Aut Laborum, Nisi Quas Eaque Laudantium Consequuntur Iste Ex Aliquam Minus Vel? Nemo.</p>
+                <div class="review__image">
+                    <img src="./images/pic-2.png" alt="pic-1">
+                    <h3> John Doe</h3>
+                </div>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-alt"></i>
+                </div>
+            </div>
+            
+            <div class="box">
+                <div class="img">
+                    <img src="./images/quote-img.png" alt="000">
+                </div>
+                <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Animi Nulla Sit Libero Nemo Fuga Sequi Nobis? Necessitatibus Aut Laborum, Nisi Quas Eaque Laudantium Consequuntur Iste Ex Aliquam Minus Vel? Nemo.</p>
+                <div class="review__image">
+                    <img src="./images/pic-3.png" alt="000">
+                    <h3> John Doe</h3>
+                </div>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-alt"></i>
+                </div>
+            </div>
+            
+            <div class="box">
+                <div class="img">
+                    <img src="./images/quote-img.png" alt="000">
+                </div>
+                <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Animi Nulla Sit Libero Nemo Fuga Sequi Nobis? Necessitatibus Aut Laborum, Nisi Quas Eaque Laudantium Consequuntur Iste Ex Aliquam Minus Vel? Nemo.</p>
+                <div class="review__image">
+                    <img src="./images/pic-1.png" alt="000">
+                    <h3> John Doe</h3>
+                </div>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-alt"></i>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 <!-- review section starts  -->
