--- a/menu.html
+++ b/menu.html
@@ -148,6 +148,22 @@
                 </div>
                 <a href="##" class="btn">Add To Cart</a>
             </div>
+            <div class="box">
+                <img src="./images/menu-2.png" alt="menu-img" class="menu-img">
+                <h3>Tasty and Healty</h3>
+                <div class="price">
+                    $15.99 <span>20.99</span>
+                </div>
+                <a href="##" class="btn">Add To Cart</a>
+            </div>
+            <div class="box">
+                <img src="./images/menu-1.png" alt="menu-img" class="menu-img">
+                <h3>Tasty and Healty</h3>
+                <div class="price">
+                    $15.99 <span>20.99</span>
+                </div>
+                <a href="##" class="btn">Add To Cart</a>
+            </div>
         </div>
     </div>
 </section>
