--- a/about.html
+++ b/about.html
@@ -57,12 +57,8 @@
 
     <!-- about section starts  -->
 
-<section class="about" id="about">
+<section class="about section" id="about">
     <div class="container">
-        <div class="inputBox_search" id="inputBox">
-            <input type="text" placeholder="search here ...">
-            <span class="fas fa-search"></span>
-        </div>
         <div class="main__cart" id="menu__cart">
             <div class="main__cart-box">
                 <img src="./images/cart-item-1.png" alt="cart-item-1">
