--- a/contacts.html
+++ b/contacts.html
@@ -56,13 +56,9 @@
 </section>
 
     <!-- contact section starts  -->
-<section class="contacts" id="contacts">
+<section class="contacts section" id="contacts">
     <div class="container">
         <div class="container">
-            <div class="inputBox_search" id="inputBox">
-                <input type="text" placeholder="search here ...">
-                <span class="fas fa-search"></span>
-            </div>
             <div class="main__cart" id="menu__cart">
                 <div class="main__cart-box">
                     <img src="./images/cart-item-1.png" alt="cart-item-1">
