--- a/index.html
+++ b/index.html
@@ -57,12 +57,8 @@
     </nav>
 </section>
 <!-- home section starts  -->
-<section class="main" id="home">
+<section class="main section" id="home">
     <div class="container">
-        <div class="inputBox_search" id="inputBox">
-            <input type="text" placeholder="search here ...">
-            <span class="fas fa-search"></span>
-        </div>
         <div class="content">
             <h3>FRESH COFFEE IN THE MORNING</h3>
             <p>Lorem Ipsum, Dolor Sit Amet Consectetur Adipisicing Elit. Placeat Labore, Sint Cupiditate Distinctio
