--- a/menu.html
+++ b/menu.html
@@ -56,13 +56,9 @@
 </section>
 
     <!-- menu section starts  -->
-<section class="menu" id="menu">
+<section class="menu section" id="menu">
     <div class="container">
         <div class="container">
-            <div class="inputBox_search" id="inputBox">
-                <input type="text" placeholder="search here ...">
-                <span class="fas fa-search"></span>
-            </div>
             <div class="main__cart" id="menu__cart">
                 <div class="main__cart-box">
                     <img src="./images/cart-item-1.png" alt="cart-item-1">
