--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>complete responsive coffee shop website design</title>
+    <title>Coffee Shop</title>
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -57,13 +57,9 @@
 
     <!-- products section starts  -->
 
-<section class="products" id="products">
+<section class="products section" id="products">
     <div class="container">
         <div class="container">
-            <div class="inputBox_search" id="inputBox">
-                <input type="text" placeholder="search here ...">
-                <span class="fas fa-search"></span>
-            </div>
             <div class="main__cart" id="menu__cart">
                 <div class="main__cart-box">
                     <img src="./images/cart-item-1.png" alt="cart-item-1">
@@ -105,7 +101,7 @@
                 <div class="icons">
                     <a href="##" class="fa fa-shopping-cart"></a>
                     <a href="##" class="fa fa-heart"></a>
-                    <a href="##" class="fa fa-eye"></a>
+                    <a href="##" class="fa fa-eye "></a>
                 </div>
                 <div class="img">
                     <img src="./images/product-1.png" alt="Product-1">
