--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
     <!-- about section starts  -->
 
 <section class="about section" id="about">
-    <div class="container">
+    <div class="container-for-cart">
         <div class="main__cart" id="menu__cart">
             <div class="main__cart-box">
                 <img src="./images/cart-item-1.png" alt="cart-item-1">
