--- a/menu.html
+++ b/menu.html
@@ -58,7 +58,7 @@
     <!-- menu section starts  -->
 <section class="menu section" id="menu">
     <div class="container">
-        <div class="container">
+        <div class="container-for-cart">
             <div class="main__cart" id="menu__cart">
                 <div class="main__cart-box">
                     <img src="./images/cart-item-1.png" alt="cart-item-1">
