--- a/review.html
+++ b/review.html
@@ -58,7 +58,7 @@
     <!-- review section starts  -->
 <section class="review section" id="review">
     <div class="container">
-        <div class="container">
+        <div class="container-for-cart">
             <div class="main__cart" id="menu__cart">
                 <div class="main__cart-box">
                     <img src="./images/cart-item-1.png" alt="cart-item-1">
