--- a/blog.html
+++ b/blog.html
@@ -58,7 +58,7 @@
     <!-- blogs section starts  -->
     <section class="blog section" id="blog">
         <div class="container">
-            <div class="container">
+            <div class="container-for-cart">
                 <div class="main__cart" id="menu__cart">
                     <div class="main__cart-box">
                         <img src="./images/cart-item-1.png" alt="cart-item-1">
