--- a/contacts.html
+++ b/contacts.html
@@ -58,7 +58,7 @@
     <!-- contact section starts  -->
 <section class="contacts section" id="contacts">
     <div class="container">
-        <div class="container">
+        <div class="container-for-cart">
             <div class="main__cart" id="menu__cart">
                 <div class="main__cart-box">
                     <img src="./images/cart-item-1.png" alt="cart-item-1">
