--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </section>
 <!-- home section starts  -->
 <section class="main section" id="home">
-    <div class="container">
+    <div class="container-for-cart">
         <div class="content">
             <h3>FRESH COFFEE IN THE MORNING</h3>
             <p>Lorem Ipsum, Dolor Sit Amet Consectetur Adipisicing Elit. Placeat Labore, Sint Cupiditate Distinctio
