--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     </div>
 </header>
 <!-- header section ends -->
+<section class="loader">
+    <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+</section>
 <section class="fullscreen__nav" id="burger-menu">
     <i class="fas fa-window-close" id="close-btn"></i>
     <nav class="mobile__nav">
@@ -58,48 +61,13 @@
 </section>
 <!-- home section starts  -->
 <section class="main section" id="home">
-    <div class="container-for-cart">
+    <div class="container">
         <div class="content">
             <h3>FRESH COFFEE IN THE MORNING</h3>
             <p>Lorem Ipsum, Dolor Sit Amet Consectetur Adipisicing Elit. Placeat Labore, Sint Cupiditate Distinctio
                 Tempora Reiciendis.</p>
             <a href="##" class="main-btn">Get Yours Now</a>
         </div>
-    </div>
-    <div class="main__cart" id="menu__cart">
-        <div class="main__cart-box">
-            <img src="./images/cart-item-1.png" alt="cart-item-1">
-            <div class="box__content">
-                <h3>Cart Item 01</h3>
-                <p class="price">$15.99/-</p>
-            </div>
-            <span class="fas fa-times"></span>
-        </div>
-        <div class="main__cart-box">
-            <img src="./images/cart-item-2.png" alt="cart-item-2">
-            <div class="box__content">
-                <h3>Cart Item 02</h3>
-                <p class="price">$15.99/-</p>
-            </div>
-            <span class="fas fa-times"></span>
-        </div>
-        <div class="main__cart-box">
-            <img src="./images/cart-item-3.png" alt="cart-item-3">
-            <div class="box__content">
-                <h3>Cart Item 03</h3>
-                <p class="price">$15.99/-</p>
-            </div>
-            <span class="fas fa-times"></span>
-        </div>
-        <div class="main__cart-box">
-            <img src="./images/cart-item-4.png" alt="cart-item-4">
-            <div class="box__content">
-                <h3>Cart Item 04</h3>
-                <p class="price">$15.99/-</p>
-            </div>
-            <span class="fas fa-times"></span>
-        </div>
-        <a href="##" class="btn">Check Out Now</a>
     </div>
 </section>
 
